# 104WeekCMastery

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: simple.c  simple.h
src/week01/: CMakeLists.txt  ptr_calc.c  ptr_calc.h  reverse.c  reverse.h  vector.c  vector.h
src/week02/: CMakeLists.txt  array.c  array.h
test/: test_simple.c
test/week01/: '  test_calc.c  test_reverse.c  test_vector.c
test/week02/: test_array.c
